# Matrix

./: .classpath  .gitignore  CMakeLists.txt  build.xml  chars.01  chars.kin  chars.street  chars.txt  quotes.txt  quotes2.txt
src/: CMakeLists.txt  matrix.c
src/erki/matrix/java2d/: Matrix.java
test/erki/matrix/: Matrix.java
